# module-regularized-grn

./: .gitignore  CLAUDE.md  Cargo.toml  FIGURES_COMPLETE.md  FINAL_STATUS.md  FINAL_SUMMARY.txt  PHASE1_SUMMARY.md  PHASE1_VALIDATION.md  PHASE2_COMPLETE.md  PHASE7_COMPLETE.md  PHASE_CHECKLISTS.md  PROJECT_COMPLETE_STATUS.md  README.md  STATUS.md  check_gene_names.py  config.toml  plan.md
archive/: paper_corrected.html
checkpoints/: checkpoint_epoch_0.json  checkpoint_epoch_10.json  checkpoint_epoch_5.json
data/: README.md
data/priors/: dorothea_priors.json  dorothea_raw.tsv  merged_priors.json  priors_stats.json  trrust_priors.json
docs/superpowers/plans/: 2026-03-15-phase8-cross-encoder-and-comparison-harness.md  2026-03-15-python-removal-and-cleanup.md  2026-03-17-dissertation-chapter-phase8.md  2026-03-17-neuron-pruning.md  2026-03-18-tnnls-paper.md  2026-03-19-reviewer2-revisions.md
docs/superpowers/specs/: 2026-03-15-phase8-cross-encoder-and-comparison-harness-design.md  2026-03-15-python-removal-and-cleanup-design.md  2026-03-17-dissertation-chapter-phase8-design.md  2026-03-17-neuron-pruning-design.md  2026-03-18-tnnls-paper-design.md
figures/: architecture.mmd
models/: __init__.py  baseline.py  losses.py  two_tower.py
paper/: chapter_phase8.bib  chapter_phase8.md  chapter_phase8.tex  main.tex  main_v2.tex  paper_tnnls.aux  paper_tnnls.bbl  paper_tnnls.blg  paper_tnnls.tex  references.bib
plans/: phase1-data-preparation.md
results/: README.md  ablation_no_product_1to1.json  ablation_no_product_5to1.json  ablation_study.json  advanced_training_log.txt  classical_baselines.json  cross_encoder_10to1.json  cross_encoder_1to1.json  cross_encoder_1to1_predictions.json  cross_encoder_5to1.json  cross_encoder_5to1_predictions.json  cross_encoder_pruning.json  enhanced_features_log.txt  ensemble_log.txt  ensemble_results.json  gcan_results.json  grnboost2_baseline.json  hyperparam_tuning_log.txt  medium_results.json  metrics.json  model_comparison.json  model_scaling_log.txt  neuron_pruning_multiseed.json  neuron_pruning_results.json  predictions.json  seed_robustness.json  standard_mlp_results.json  standard_mlp_training_log.txt  statistical_analysis.json  target_95_results.json  temperature_search.json  two_tower_10to1.json  two_tower_1to1.json  two_tower_1to1_predictions.json  two_tower_5to1.json  two_tower_5to1_predictions.json
scripts/: baseline_comparison.py  comprehensive_improvements.py  convert_gene_ids.py  download_brain_data.py  feature_engineering.py  generate_all_figures.py  generate_tables.py  make_chapter_pdf.sh  make_pdf.py  make_pdf.sh  plot_results.py  process_brain_data.py  process_h5ad.py  run_grnboost2_baseline.py  statistical_analysis.py  train_advanced.py  train_attention_model.py
src/: config.rs  lib.rs  main.rs
src/data/: dataloader.rs  edges.rs  expression.rs  loader.rs  mod.rs  priors.rs  state.rs  types.rs
src/evaluation/: metrics.rs  mod.rs
src/loss/: contrastive.rs  metrics.rs  mod.rs
src/models/: attention.rs  attention_model.rs  baseline.rs  bilinear_two_tower.rs  classifier_head.rs  cross_attention_model.rs  cross_encoder.rs  cross_encoder_no_product.rs  embeddings.rs  expression_model.rs  hybrid_embeddings.rs  learnable_embeddings.rs  mod.rs  nn.rs  optimized_embeddings.rs  scalable_hybrid.rs  two_tower.rs
src/training/: checkpoint.rs  mod.rs  optimizer.rs  trainer.rs
