[package]
name = "module-regularized-grn"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "download_priors"
path = "src/bin/download_priors.rs"

[[bin]]
name = "process_data"
path = "src/bin/process_data.rs"

[[bin]]
name = "train"
path = "src/bin/train.rs"

[[bin]]
name = "train_example"
path = "src/bin/train_example.rs"

[dependencies]
ndarray = { version = "0.15", features = ["rayon"] }
ndarray-rand = "0.14"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
rand = "0.8"
rand_distr = "0.4"
anyhow = "1.0"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
indicatif = "0.17"
chrono = { version = "0.4", features = ["serde"] }
rayon = "1.8"

[dev-dependencies]
tempfile = "3.8"

[lib]
name = "module_regularized_grn"
path = "src/lib.rs"
