[package]
name = "module-regularized-grn"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "download_priors"
path = "src/bin/download_priors.rs"

[[bin]]
name = "process_data"
path = "src/bin/process_data.rs"

[[bin]]
name = "train_standard_mlp"
path = "src/bin/train_standard_mlp.rs"

[[bin]]
name = "hyperparam_tuning"
path = "src/bin/hyperparam_tuning.rs"

[[bin]]
name = "train_ensemble"
path = "src/bin/train_ensemble.rs"

[[bin]]
name = "ablation_study"
path = "src/bin/ablation_study.rs"

[[bin]]
name = "seed_robustness"
path = "src/bin/seed_robustness.rs"

[[bin]]
name = "evaluate"
path = "src/bin/evaluate.rs"

[[bin]]
name = "statistical_analysis"
path = "src/bin/statistical_analysis.rs"

[[bin]]
name = "generate_tables"
path = "src/bin/generate_tables.rs"

[[bin]]
name = "generate_figures"
path = "src/bin/generate_figures.rs"

[[bin]]
name = "train_cross_encoder"
path = "src/bin/train_cross_encoder.rs"

[[bin]]
name = "compare_models"
path = "src/bin/compare_models.rs"

[[bin]]
name = "neuron_pruning"
path = "src/bin/neuron_pruning.rs"

[[bin]]
name = "cross_encoder_pruning"
path = "src/bin/cross_encoder_pruning.rs"

[[bin]]
name = "generate_chapter_figures"
path = "src/bin/generate_chapter_figures.rs"

[dependencies]
ndarray = { version = "0.15", features = ["rayon"] }
ndarray-rand = "0.14"
ndarray-npy = "0.8"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
rand = "0.8"
rand_distr = "0.4"
anyhow = "1.0"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
indicatif = "0.17"
chrono = { version = "0.4", features = ["serde"] }
rayon = "1.8"
plotters = { version = "0.3", default-features = false, features = ["svg_backend", "line_series", "area_series"] }
statrs = "0.17"

[dev-dependencies]
tempfile = "3.8"

[lib]
name = "module_regularized_grn"
path = "src/lib.rs"
